# axum-tera

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml
frontend/: index.html
frontend/pages/: about.html  not_found.html
frontend/utils/: header.html
src/: main.rs
templates/: index.html
templates/pages/: about.html
