[package]
name = "axum-tera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ['full']}
hyper = { version = "0.14.27", features = ['full']}
tower = { version = "0.4.13", features = ['full']}
axum-template = "1.0.0"
tera = "1.19.0"
