[package]
name = "axum-tera"
version = "1.0.0"
authors = ["Daiki Nakashima"]
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ['full']}
hyper = { version = "1.5.2", features = ['full']}
tower = { version = "0.5.2", features = ['full']}
axum-template = "2.4.0"
tera = "1.20.0"
axum-macros = "0.4.2"

[dev-dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
